--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,9 @@
     <string name="miles">miles</string>
     <string name="calculate">Calculate</string>
     <string name="litre">/Litre</string>
+    <string-array name="unit_spinner">
+        <item>£/Litre</item>
+        <item>p/Litre</item>
+    </string-array>
 
 </resources>
